--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -16,6 +16,7 @@
         height: $row-height;
     }
     .row-info{
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -39,6 +40,7 @@
         border-top: 0;
         border-left: 0;
         height: 100%;
+        position: relative;
     }
     .cell{
         min-width: 40px;
@@ -54,8 +56,38 @@
 
         &.selected{
             border: none;
-            outline: 2px solid #3c74ff;
+            outline: 2px solid $primary-color;
             z-index: 2;
+        }
+    }
+    .col-resize{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: -1px;
+        width: 4px;
+        background: $primary-color;
+        z-index: 1000;
+        opacity: 0;
+
+        &:hover{
+            opacity: 0.8 !important;
+            cursor: col-resize;
+        }
+    }
+    .row-resize{
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -1px;
+        height: 4px;
+        background: $primary-color;
+        z-index: 1000;
+        opacity: 0;
+
+        &:hover{
+            opacity: 0.8 !important;
+            cursor: row-resize;
         }
     }
 }
